FIX: Vertical align welcome page.

--- a/couchdb/_attachments/welcome.css
+++ b/couchdb/_attachments/welcome.css
@@ -1,12 +1,20 @@
-#main {
+#body {
+  height:100%;
+}
+
+#welcome #main {
     font-family: "Trebuchet MS";
     font-size: 90%;
+    top:50%;
     background: linear-gradient(to bottom, rgba(235,235,235,1) 0%, white 5%);
+            transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    position:relative;
+    padding:0px;
 }
 
 #main #top {
-    margin: 1%;
-    margin-top: 30px;
     text-align: center;
 }
 
@@ -50,17 +58,20 @@
     float: left;
 }
 
-#middle .start {
-    font-size: 120%;
+#bottom {
+  text-align: center;
+  height: 32px;
+}
+
+#bottom a.start {
+    font-size: 18px;
     border: 3px black solid;
-    position: relative;
     box-shadow: 3px 3px 0 black;
-    bottom: -30px;
     text-decoration: none;
     color: black;
 }
 
-#middle .start:hover {
+#bottom a.start:hover {
     box-shadow: 5px 5px 10px black;
-    font-size: 130%;
+    font-size: 19px;
 }
